--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>OMG! You will not believe me but...</h1>
     <p id="excuse"></p>
+    <button onclick="genarateAnExcuse();">Click me</button>
     <script src="index.js"></script>
 </body>
 </html>
